# shorthair

./: .gitmodules  CMakeLists.txt  Counter.h  LICENSE  Makefile  PacketAllocator.cpp  PacketAllocator.h  README.md  Redundancy.cpp  Shorthair.cpp  Shorthair.hpp  ShorthairDetails.hpp  Tester.cpp  cauchy_256.cpp
attic/: BrookTest.cpp  CalculateRedundancy.txt  ReuseAllocator.cpp  ReuseAllocator.hpp  TesterOrdering.cpp
calico/: AntiReplayWindow.cpp  AntiReplayWindow.hpp  BigMath.hpp  Calico.cpp  Calico.hpp  ChaChaVMAC.cpp  ChaChaVMAC.hpp  ICryptHash.hpp  Skein.cpp  Skein.hpp  Skein256.cpp  VHash.cpp  VHash.hpp
cymric/: Cymric.cpp  Cymric.hpp
include/: Shorthair.hpp  ShorthairDetails.hpp
libcat/: Atomic.hpp  Base64.cpp  Base64.hpp  Clock.cpp  Delegates.hpp  EndianNeutral.hpp  Enforcer.cpp  HashTable.cpp  HashTable.hpp  LinkedLists.cpp  LinkedLists.hpp  MappedFile.cpp  MappedFile.hpp  MergeSort.hpp  MersenneTwister.cpp  MulticastDelegates.hpp  Mutex.cpp  Mutex.hpp  RefObject.cpp  RefObject.hpp  RefSingleton.cpp  RefSingleton.hpp  Settings.cpp  Settings.hpp  Singleton.cpp  Singleton.hpp  Strings.cpp  Strings.hpp  SystemInfo.cpp  SystemInfo.hpp
proj/: shorthair_win32.sln  shorthair_win32.vcxproj  shorthair_win32.vcxproj.filters
ragdoll/: RagdollFile.cpp  RagdollFile.hpp
shared/: BitMath.cpp  BitMath.hpp  Clock.hpp  Delegates.hpp  Enforcer.hpp  IAllocator.hpp  MersenneTwister.cpp  MersenneTwister.hpp  Platform.hpp  ReuseAllocator.cpp  ReuseAllocator.hpp  SecureEqual.cpp  SecureEqual.hpp  SmartArray.hpp  Thread.cpp  Thread.hpp  WaitableFlag.cpp  WaitableFlag.hpp  (+2 more)
(+45 files in other folders)
